[tool.poetry]
name = "autowebscraping"
version = "0.1.0"
description = ""
authors = ["VenomGaming1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
request2 = "^0.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
